[refactor] static code analysis fixes